2013-03-15 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/massive/massive_copy_modules.php: uploaded lost changes
	for previous fixed (days ago).
	
	* godmode/groups/group_list.php, include/graphs/functions_flot.php,
	include/graphs/fgraph.php, include/functions_agents.php,
	general/logon_ok.php: cleaned source code style.

2013-03-15  Mario Pulido <mario.pulido@artica.es>

	* include/help/en/help_plugin_policy.php
	include/help/es/help_plugin_policy.php: Added plugin policy help.

2013-03-15  Mario Pulido <mario.pulido@artica.es>

	* include/help/en/help_performance.php, include/help/es/help_performance.php
 	godmode/setup/setup.php: Add help in performance configuration.


2013-03-15  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_ui.php
	  operation/agentes/status_monitor: Added popup with data
	module, remove column 'tags' and changed font size to
	column 'timestamp'.

2013-03-15  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_treeview.php
	  include/functions_ui.php
	  include/ajax/module.php
	  include/javascript/pandora_modules.js
	  operation/tree.php: Added popup with data
	module.

2013-03-15 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Improved performance of
	get_tree_agents() API by omitting unnecessary data copies and
	queries when output fields are explicitly specified.


2013-03-14  Mario Pulido  <mario.pulido@artica.es>

	* operation/users/user_edit.php, godmode/users/configure_user.php: Add tip in edit users
	* include/help/en/help_profile.php, include/help/es/help_profile.php: Modified help file 
	in profiles management

2013-03-14  Junichi Satoh  <junichi@rworks.jp>
	
       * include/help/ja/help_history_database.php: Added a new help file.

2013-03-13  Ramon Novoa  <rnovoa@artica.es>

	* godmode/servers/modificar_server.php: Let an Enterprise SNMP server
	  claim back modules that were moved to the Network server.

2013-03-13 Miguel de Dios <miguel.dedios@artica.es>
	