@@ -1,5 +1,12 @@
 2013-03-15 Miguel de Dios <miguel.dedios@artica.es>
 	
+	* include/functions_events.php, include/functions_html.php,
+	include/functions_graph.php, include/functions_reporting.php,
+	operation/events/events_list.php, operation/events/events.php,
+	operation/agentes/group_view.php: improved source code style.
+
+2013-03-15 Miguel de Dios <miguel.dedios@artica.es>
+	
 	* godmode/massive/massive_copy_modules.php: uploaded lost changes
 	for previous fixed (days ago).
 	
